tests/compile_fails/invalid_identifier_rename.stderr
error: expected identifier
 --> tests/compile_fails/invalid_identifier_rename.rs:3:10
  |
3 | #[derive(Dissolve)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Dissolve` (in Nightly builds, run with -Z macro-backtrace for more info)
